fix: fixed chart not responsive

--- a/src/App.css
+++ b/src/App.css
@@ -205,11 +205,9 @@ ul {
     justify-content: space-evenly;
 }
 .hist_chart {
-    width: 100% !important;
-    max-width: 900px;
-    height: auto !important;
-    margin-left: auto;
-    margin-right: auto;
+    max-height: 80vh;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .btn {
     padding: 1em 2.1em 1.1em;
